--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ language: python
 python:
   - "2.7"
 # command to install dependencies
-install:
-  - pip install .
+install: true
 # command to run tests
 script: pytest
