--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: python
 python:
   - "2.7"
 # command to install dependencies
-install: true
+install:
+  - pip install pytextutils/.
 # command to run tests
 script: py.test
