--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
 
 # command to install dependencies
 install:
-  - pip install -e jsonutils/.
+  - pip install -e .
 
 # command to run tests
 script: py.test
